# openlama

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: README_ko.md
src/openlama/: __init__.py  auth.py  cli.py  config.py  crypto.py  daemon.py  database.py  doctor.py  logger.py  logo.py  ollama_client.py  onboarding.py  service.py
src/openlama/channels/: base.py
src/openlama/core/: agent.py  commands.py  context.py  incomplete_turn.py  mcp_client.py  memory.py  multi_agent.py  onboarding.py  prompt_builder.py  scheduler.py  skills.py  tool_loop.py  types.py
src/openlama/tools/: __init__.py  calculator.py  code_agent.py  code_runner.py  cron_tool.py  datetime_tool.py  file_read.py  file_write.py  git_tool.py  google_appscript.py  google_auth.py  google_calendar.py  google_chat.py  google_contacts.py  google_docs.py  google_drive.py  google_forms.py  google_gmail.py  google_keep.py  google_people.py  google_sheets.py  google_slides.py  google_tasks.py  image_edit.py  image_generate.py  mcp_manager.py  memory_tool.py  obsidian_tool.py  registry.py  (+9 more)
tests/: conftest.py  test_auth.py  test_comfyui.py  test_commands.py  test_config.py  test_context.py  test_cron_db.py  test_daemon.py  test_database.py  test_doctor.py  test_file_processor.py  test_formatting.py  test_incomplete_turn.py  test_ollama.py  test_phase4_improvements.py  test_phase4_remaining.py  test_prompt_builder.py  test_sandbox.py  test_scheduler.py  test_security.py  test_settings_ui.py  test_skills.py  test_slash_completer.py  test_subprocess.py  test_tool_loop.py  test_tools.py
(+12 files in other folders)
