[project]
name = "openlama"
version = "0.1.60"
description = "Personal AI agent bot — Telegram + Ollama"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "python-telegram-bot>=21.7",
    "telegramify-markdown>=1.1",
    "httpx>=0.27",
    "PyMuPDF>=1.27",
    "Pillow>=12",
    "duckduckgo-search>=8",
    "click>=8.0",
    "rich>=13",
    "questionary>=2",
    "mcp>=1.0",
    "croniter>=1.0",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
stt = [
    "faster-whisper>=1.0",
]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1.3",
]

[project.scripts]
openlama = "openlama.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openlama"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
